<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">水果在线</string>
    <string name="app_name_full">社区水果在线商店</string>
    <string name="neterror">网络不给力</string>
    <string name="dataerror1">暂无数据</string>
    <string name="dataerror2">搜索结果为空</string>
    <string name="dataerror3">购物车为空</string>
    <string name="dataloading">数据加载中</string>
    <string name="delete">删除</string>
    <string name="del_confirm">确认删除？</string>
    <string name="opt">操作</string>
    <string name="tip">提示</string>
    <string name="search">搜索</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="loadingdialog_str1">加载中,请稍候</string>
    <string name="add2cart">加入购物车</string>
    <string name="addsuccess">添加成功</string>
    
    <string name="submit">提交</string>
    <string name="success">成功</string>
    <string name="addr">地址</string>
    <string name="choice">选择</string>
    <string name="cartnum">修改数量</string>
    
    <string name="cartjs">结算</string>
    <string name="cartjs1">收货人：</string>
    <string name="cartjs2">地址：</string>
    <string name="cartjs3">电话号码：</string>
    <string name="cartjs4">送货时间：</string>
    
    <string name="cartjshint1">输入收货人</string>
    <string name="cartjshint2">选择地区</string>
    <string name="cartjshint3">输入电话号码</string>
    <string name="cartjshint4"></string>
    
    <string name="detail_str1">商品介绍：</string>
    <string name="detail_str2">储存方式：</string>
    <string name="detail_str3">商品禁忌：</string>
    <string name="detail_str4">菜谱推荐：</string>
    <string name="detail_str5">价格：</string>
    <string name="detail_str6">配送范围：</string>
    <string name="detail_str7">产地：</string>
    <string name="detail_str8">品牌：</string>
    <string name="detail_str9">购买数量：</string>
    <string name="detail_num1">1</string>

</resources>