<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cart_js_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/cartjs"
            android:textColor="@color/title_bg"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/title_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            android:text="@string/cartjs1" />

        <EditText
            android:id="@+id/cart_js_shr"
            android:layout_width="match_parent"
            android:layout_height="35dip"
            android:layout_weight="1"
            android:background="@drawable/searchedit_bg"
            android:gravity="center_vertical"
            android:hint="@string/cartjshint1"
            android:maxLines="1"
            android:padding="5dip"
            android:textColor="@color/dark_gray"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            android:text="@string/cartjs2" />

        <TextView
            android:id="@+id/cart_js_dz"
            android:layout_width="match_parent"
            android:layout_height="100dip"
            android:layout_weight="1"
            android:background="@drawable/searchedit_bg"
            android:gravity="top"
            android:hint="@string/cartjshint2"
            android:padding="5dip"
            android:textColor="@color/dark_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            android:text="@string/cartjs3" />

        <EditText
            android:id="@+id/cart_js_dhhm"
            android:layout_width="match_parent"
            android:layout_height="35dip"
            android:layout_weight="1"
            android:background="@drawable/searchedit_bg"
            android:gravity="center_vertical"
            android:hint="@string/cartjshint3"
            android:inputType="number"
            android:maxLines="1"
            android:padding="5dip"
            android:textColor="@color/dark_gray"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            android:text="@string/cartjs4" />

        <EditText
            android:id="@+id/cart_js_shsj"
            android:layout_width="match_parent"
            android:layout_height="35dip"
            android:layout_weight="1"
            android:background="@drawable/searchedit_bg"
            android:gravity="center_vertical"
            android:hint="@string/cartjshint4"
            android:maxLines="1"
            android:padding="5dip"
            android:textColor="@color/dark_gray"
            android:textSize="12sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cart_js_confirm"
            android:layout_width="0dip"
            android:layout_height="50dip"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/confirm"
            android:textSize="12sp" />

        <View
            android:layout_width="1dip"
            android:layout_height="50dip"
            android:background="@color/gray" />

        <Button
            android:id="@+id/cart_js_cancel"
            android:layout_width="0dip"
            android:layout_height="50dip"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/cancel"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>