<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aty_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:background="@color/title_bg" >

        <ImageView
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/logo" />

        <Button
            android:id="@+id/cart_js_confirm"
            android:layout_width="wrap_content"
            android:layout_height="30dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:background="@drawable/btn_bg"
            android:text="@string/confirm"
            android:textSize="12sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/title_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="right"
            android:text="@string/cartjs1"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/cart_js_shr"
            android:layout_width="match_parent"
            android:layout_height="35dip"
            android:layout_weight="1"
            android:background="@drawable/searchedit_bg"
            android:gravity="center_vertical"
            android:hint="@string/cartjshint1"
            android:maxLines="1"
            android:padding="5dip"
            android:textColor="@color/dark_gray"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="right"
            android:text="@string/cartjs2"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/cart_js_dz"
            android:layout_width="match_parent"
            android:layout_height="100dip"
            android:layout_weight="1"
            android:background="@drawable/searchedit_bg"
            android:gravity="top"
            android:hint="@string/cartjshint2"
            android:padding="5dip"
            android:textColor="@color/dark_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="right"
            android:text="@string/cartjs3"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/cart_js_dhhm"
            android:layout_width="match_parent"
            android:layout_height="35dip"
            android:layout_weight="1"
            android:background="@drawable/searchedit_bg"
            android:gravity="center_vertical"
            android:hint="@string/cartjshint3"
            android:inputType="number"
            android:maxLines="1"
            android:padding="5dip"
            android:textColor="@color/dark_gray"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="right"
            android:text="@string/cartjs4"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/cart_js_shsj"
            android:layout_width="match_parent"
            android:layout_height="35dip"
            android:layout_weight="1"
            android:background="@drawable/searchedit_bg"
            android:gravity="center_vertical"
            android:hint="@string/cartjshint4"
            android:maxLines="1"
            android:padding="5dip"
            android:textColor="@color/dark_gray"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>