<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aty_bg"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:background="@color/title_bg" >

        <ImageView
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/detail_search"
            android:layout_width="200dip"
            android:layout_height="35dip"
            android:layout_centerInParent="true"
            android:background="@drawable/searchedit_bg"
            android:hint="@string/search"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:textColor="@color/dark_gray" />

        <ImageView
            android:id="@+id/detail_cart"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/cart" />

        <TextView
            android:id="@+id/detail_cartnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-25dip"
            android:layout_marginTop="10dip"
            android:layout_toRightOf="@id/detail_cart"
            android:background="@drawable/cartnum_bg"
            android:gravity="center"
            android:maxLines="1"
            android:paddingBottom="1dip"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:text="@string/detail_num1"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:textStyle="bold"
            android:visibility="gone" />
    </RelativeLayout>

    <com.fruit.custom.GalleryFlow
        android:id="@+id/detail_gallery"
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:background="@color/dark_gray" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="5dip"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dip"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:text="@string/app_name"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dip"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:text="@string/detail_str5"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/detail_add2cart"
                android:layout_width="wrap_content"
                android:layout_height="35dip"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="5dip"
                android:background="@drawable/btn_bg"
                android:text="@string/add2cart"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:background="@color/dark_gray" />

            <RelativeLayout
                android:id="@+id/detail_webview_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>