<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/shaddr_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/choice"
            android:textColor="@color/title_bg"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/title_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dip" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Spinner
                android:id="@+id/shaddr_spinner1"
                style="@style/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView style="@style/spinner_downimg_style" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip" >

            <Spinner
                android:id="@+id/shaddr_spinner2"
                style="@style/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView style="@style/spinner_downimg_style" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip" >

            <Spinner
                android:id="@+id/shaddr_spinner3"
                style="@style/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView style="@style/spinner_downimg_style" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip" >

            <Spinner
                android:id="@+id/shaddr_spinner4"
                style="@style/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView style="@style/spinner_downimg_style" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/shaddr_confirm"
            android:layout_width="0dip"
            android:layout_height="50dip"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/confirm"
            android:textSize="12sp" />

        <View
            android:layout_width="1dip"
            android:layout_height="50dip"
            android:background="@color/gray" />

        <Button
            android:id="@+id/shaddr_cancel"
            android:layout_width="0dip"
            android:layout_height="50dip"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/cancel"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>